Loading animation added (when post button is clicked)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.intuit.sdp:sdp-android:1.0.3'
     compile 'com.github.nguyenhoanglam:ImagePicker:1.1.2'
+    compile 'com.wang.avi:library:2.1.3'
 }
